# optimization_tools

./: CMakeLists.txt  README.md
include/: problem.h  solver.h
jupyter_pybind/: README.md  pybind.cpp
jupyter_pybind/notebooks/scripts/: plot_solver.py  test.html
jupyter_pybind/notebooks/scripts/lib/: figure_layer.py
src/: problem.cpp  solver.cpp
test/: test_problem.cpp  test_solver.cpp
